k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies
  namespace: movies
  labels:
    app: movies
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: movies
